--- a/src/app/pages/quotation/quotation.component.html
+++ b/src/app/pages/quotation/quotation.component.html
@@ -55,6 +55,7 @@
 
 
                   <div  class="col-xs-12" *ngIf="selectedProduct.name == 'Puerta rápida'">
+                      <app-draw-door></app-draw-door>
                   </div>
 
 
