Add test of Canvas for door

--- a/src/app/pages/quotation/quotation.component.html
+++ b/src/app/pages/quotation/quotation.component.html
@@ -54,7 +54,7 @@
 
 
 
-                  <div  class="col-xs-12" *ngIf="selectedProduct.name == 'Puerta rápida'">
+                  <div  class="col-xs-12 text-center" *ngIf="selectedProduct.name == 'Puerta rápida'">
                       <app-draw-door></app-draw-door>
                   </div>
 
