Add methods to change color in draw-door

--- a/src/app/pages/quotation/draw-door/draw-door.component.html
+++ b/src/app/pages/quotation/draw-door/draw-door.component.html
@@ -1,19 +1,19 @@
 
 
 
-<h1 (click)="onClick($event)" (mouseenter)="onMouseEnter($event)" (mouseleave)="onMouseLeave($event)" >Puerta </h1>
-    <ngvas [width]="500" [height]="800">
+<h1>Puerta </h1>
+    <ngvas [width]="500" [height]="500">
 
       
-     <ngvas-rectangle [fill]="squareFill" x="250" y="0" [width]="400" [height]="80" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
-    <ngvas-rectangle [fill]="squareFill" x="57.5" y="240" [width]="15" [height]="510" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
-    <ngvas-rectangle [fill]="squareFill" x="442.5" y="240" [width]="15" [height]="510" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
-    <ngvas-rectangle [fill]="otherFill" x="250" y="130" [width]="370" [height]="180" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
+     <ngvas-rectangle [fill]="outlineFill" x="250" y="0" [width]="400" [height]="80" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
+    <ngvas-rectangle [fill]="outlineFill" x="57.5" y="240" [width]="15" [height]="510" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
+    <ngvas-rectangle [fill]="outlineFill" x="442.5" y="240" [width]="15" [height]="510" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
+    <ngvas-rectangle [fill]="lonaFill" x="250" y="130" [width]="370" [height]="180" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
     <ngvas-rectangle [fill]="borderFill" x="250" y="222.5" [width]="370" [height]="5" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
-    <ngvas-rectangle [fill]="otherFill" x="250" y="265" [width]="370" [height]="80" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
+    <ngvas-rectangle [fill]="lonaFill" x="250" y="265" [width]="370" [height]="80" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
     <ngvas-rectangle [fill]="borderFill" x="250" y="307.5" [width]="370" [height]="5" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
-    <ngvas-rectangle [fill]="otherFill" x="250" y="355" [width]="370" [height]="90" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
+    <ngvas-rectangle [fill]="lonaFill" x="250" y="355" [width]="370" [height]="90" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
     <ngvas-rectangle [fill]="borderFill" x="250" y="402.5" [width]="370" [height]="5" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
-    <ngvas-rectangle [fill]="otherFill" x="250" y="450" [width]="370" [height]="90" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
+    <ngvas-rectangle [fill]="lonaFill" x="250" y="450" [width]="370" [height]="90" origin="center" [hitArea]="pixelHitArea"></ngvas-rectangle>
 
     </ngvas>
