deploy(app): deploying application v2.0.2

--- a/src/app/pages/quotation/quotation-form/quotation-form.component.html
+++ b/src/app/pages/quotation/quotation-form/quotation-form.component.html
@@ -1,4 +1,4 @@
-<form class="form" [formGroup]="productForm" (ngSubmit)="registerQuotation(quotationForm)" novalidate>
+<form class="form" [formGroup]="quotationForm" (ngSubmit)="registerQuotation(quotationForm)" novalidate>
   <div *ngFor="let property of product.properties">
     <div class="clearfix" *ngIf="property.type === 'bool'"></div>
     <div class="col-xs-12 col-sm-6">
