Fix images urls

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,7 +16,7 @@ _________________________________________________________ -->
 
       <div class="row">
         <div class="col-sm-6 mb-small">
-          <img class="img-responsive" src="../../../assets/img/Hello.png" alt="">
+          <img class="img-responsive" src="assets/img/Hello.png" alt="">
         </div>
 
         <div class="col-sm-6 text-center-xs">
