--- a/src/app/pages/products/doors/doors.component.css
+++ b/src/app/pages/products/doors/doors.component.css
@@ -2,7 +2,7 @@
 
 
 .jumbotron {
-  background: url(/../../../assets/img/3.jpg) center center repeat;
+  background: url('https://cdn.pixabay.com/photo/2015/07/17/22/43/student-849825_960_720.jpg') center center repeat;
   background-size: cover;
 }
 
