--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -45,8 +45,8 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand home" href="javascript: void(0);" routerLink="/">
-            <img src="./../../../../assets/img/logoEnd.png" alt="Universal logo" class="hidden-xs hidden-sm">
-            <img src="./../../../../assets/img/logoEnd.png" alt="Universal logo" class="visible-xs visible-sm"><span class="sr-only">Universal - go to homepage</span>
+            <img src="assets/img/logoEnd.png" alt="Universal logo" class="hidden-xs hidden-sm">
+            <img src="assets/img/logoEnd.png" alt="Universal logo" class="visible-xs visible-sm"><span class="sr-only">Universal - go to homepage</span>
           </a>
           <div class="navbar-buttons">
             <button type="button" class="navbar-toggle btn-template-main" data-toggle="collapse" data-target="#navigation">
