--- a/src/app/pages/quotation/quotation.component.html
+++ b/src/app/pages/quotation/quotation.component.html
@@ -126,9 +126,49 @@
                       </mat-form-field>
                     </div>
                   </div>
-                  <div class="clearfix"></div>
-                  <br>
                   <div class="col-xs-12">
+
+
+                  <div class="col-xs-12" *ngIf="!user" >
+                    <div class="row">
+                      <div class="col-xs-12 col-sm-6">
+                        <mat-form-field class="full-width">
+                          <input matInput class="full-width" id="password" formControlName="password" type="password" placeholder='Contraseña*' />
+                        </mat-form-field>
+                        <mat-chip class="mat-primary"  *ngIf="quotationForm.controls.password.dirty && quotationForm.controls.password.errors">
+                          <ul class="list-unstyled">
+                            <li *ngIf="quotationForm.controls.password.hasError('required')">
+                              <span class="fa fa-exclamation"></span> Oops, este campo es requerido!
+                            </li>
+                            <li *ngIf="!quotationForm.controls.password.hasError('required') && quotationForm.controls.password.hasError('minlength')">
+                              <span class="fa fa-exclamation"></span> Oops, este campo debe contener minimo 8 caracteres!
+                            </li>
+                          </ul>                
+                        </mat-chip>
+                      </div>
+                      <div class="col-xs-12 col-sm-6">
+                        <mat-form-field class="full-width">
+                          <input matInput class="full-width" id="confirmpassword" formControlName="confirmPassword" type="password" placeholder='Confirmar contraseña*' />
+                        </mat-form-field>
+                        <mat-chip class="mat-primary" *ngIf="quotationForm.controls.confirmPassword.dirty && quotationForm.controls.confirmPassword.errors">
+                          <ul class="list-unstyled">
+                            <li *ngIf="quotationForm.controls.confirmPassword.hasError('required')">
+                              <span class="fa fa-exclamation"></span> Oops, este campo es requerido!
+                            </li>
+                            <li *ngIf="!quotationForm.controls.confirmPassword.hasError('required') && quotationForm.value.password != quotationForm.value.confirmPassword">
+                              <span class="fa fa-exclamation"></span> Oops, los campos de contraseña deben coincidir!
+                            </li>
+                          </ul>
+                        </mat-chip>
+                      </div>
+                    </div>
+                    <div class="clearfix"></div>
+                    <br>
+                  </div>
+
+
+
+
                     <div class="col-xs-12">
                       <h4>Información de Empresa</h4>
                     </div>
