--- a/src/app/pages/products/legos/legos.component.html
+++ b/src/app/pages/products/legos/legos.component.html
@@ -22,7 +22,7 @@
       <div class="col-md-6 text-center">
 
         <div class="embed-container">
-          <iframe src="https://3dwarehouse.sketchup.com/embed.html?mid=e508eecf-4959-4521-88d2-92ce4b7a161c&width=580&height=326" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
+          <iframe src="https://myhub.autodesk360.com/ue2a9b90d/shares/public/SHabee1QT1a327cf2b7a7e1816382c9caa87?mode=embed" width="580" height="326" allowfullscreen scrolling="no" marginheight="0" marginwidth="0" frameborder="0"></iframe>
         </div>
       </div>
     </div>
