--- a/src/app/pages/products/machinery/machinery.component.html
+++ b/src/app/pages/products/machinery/machinery.component.html
@@ -70,3 +70,22 @@
     </div>
   </div>
 </section>
+<hr _ngcontent-c5="" class="style-two">
+<section class="bar background-gray  no-mb padding-big text-center-sm">
+  <div class="container">
+    <div class="row">
+      <div class="heading text-justify">
+        <h1>Otros Modelos</h1>
+      </div>
+      <div class="embed-container col-md-4">
+        <iframe src="https://myhub.autodesk360.com/ue2a9b90d/shares/public/SHabee1QT1a327cf2b7aaeccc90fc5d4c177?mode=embed" width="580" height="326" allowfullscreen scrolling="no" marginheight="0" marginwidth="0" frameborder="0"></iframe>
+      </div>
+      <div class="embed-container col-md-4">
+        <iframe src="https://myhub.autodesk360.com/ue2a9b90d/shares/public/SHabee1QT1a327cf2b7a10f418dec0bab929?mode=embed" width="580" height="326" allowfullscreen scrolling="no" marginheight="0" marginwidth="0" frameborder="0"></iframe>
+      </div>
+      <div class="embed-container col-md-4">
+        <iframe src="https://myhub.autodesk360.com/ue2a9b90d/shares/public/SHabee1QT1a327cf2b7ab32f8be077ecd742?mode=embed" width="580" height="326" allowfullscreen scrolling="no" marginheight="0" marginwidth="0" frameborder="0"></iframe>
+      </div>
+    </div>
+  </div>
+</section>
