changes in carrousel of home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -128,43 +128,61 @@ _________________________________________________________ -->
 
 
 
-  <div class="bs-example ">
-    <div id="myCarousel " class="carousel slide " data-interval="2000 " data-ride="carousel ">
+  <div class="bs-example">
+    <div id="myCarousel" class="carousel slide" data-interval="1500 " data-ride="carousel ">
       <!-- Carousel indicators -->
 
       <!-- Wrapper for carousel items -->
-      <div class="carousel-inner ">
-        <div class="active item ">
-          <img src="https://jaxenter.com/wp-content/uploads/2016/12/angular.png " alt="First Slide ">
+      <div class="carousel-inner">
+        <div class="active item">
+          <img src="https://jaxenter.com/wp-content/uploads/2016/12/angular.png " alt="First Slide" max-width="400px">
           <div class="carousel-caption ">
-
             <h3>Angular 4</h3>
-
-
           </div>
         </div>
-        <div class="item ">
-          <img class="size-image " src="http://codig0latino.com/wp-content/uploads/2015/09/Python-3-4-0-Beta-2-Now-Available-for-Download-417591-21.png " alt="Second Slide ">
+        <div class="item">
+          <img class="size-image " src="http://codig0latino.com/wp-content/uploads/2015/09/Python-3-4-0-Beta-2-Now-Available-for-Download-417591-21.png " alt="Second Slide " max-width="400px">
           <div class="carousel-caption ">
-
-            <p>El lenguaje de programación simple y libre.</p>
-
+            <h3>El lenguaje de programación simple y libre.</h3>
           </div>
         </div>
-        <div class="item ">
-          <img src="https://lh3.googleusercontent.com/Dq-mZ5mmdE6aFPeD61DNlVTwYSI75UwHBYDq_BxBZOMSzCBnQ5OCC4-LjfP42tDlyw=w300 " alt="Third Slide ">
+        <div class="item">
+          <img src="https://lh3.googleusercontent.com/Dq-mZ5mmdE6aFPeD61DNlVTwYSI75UwHBYDq_BxBZOMSzCBnQ5OCC4-LjfP42tDlyw=w300 " alt="Third Slide " max-width="400px">
           <div class="carousel-caption ">
-
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            <h3>La herramienta de comunicación en equipo.</h3>
+          </div>
+        </div>
+        <div class="item">
+          <img src="https://cdn-images-1.medium.com/max/440/1*-oIlwIWlt0BDN4b5a9rRCQ.jpeg" alt="Ruby">
+          <div class="carousel-caption ">
+            <h3>La simplicidad en el desarrollo de apps del mundo real.</h3>
+          </div>
+        </div>
+        <div class="item">
+          <img src="https://spin.atomicobject.com/wp-content/uploads/20171003153036/github-logo.png" alt="Github">
+          <div class="carousel-caption ">
+            <h3>Donde se hace el codigo, nosotros estamos ahí.</h3>
+          </div>
+        </div>
+        <div class="item">
+          <img src="http://static1.squarespace.com/static/5553aa15e4b0f175fd67a77e/t/559ad3d7e4b025eeecf8c44c/1436210136496/auto_desk_inventor" alt="Inventor">
+          <div class="carousel-caption ">
+            <h3>Poderosas herramientas nos acompañan.</h3>
+          </div>
+        </div>
+        <div class="item">
+          <img src="https://upload.wikimedia.org/wikipedia/zh/thumb/e/ec/Heroku_logo.svg/800px-Heroku_logo.svg.png" alt="Heroku">
+          <div class="carousel-caption ">
+            <h3>Nuestras bases de datos corren acá.</h3>
           </div>
         </div>
       </div>
       <!-- Carousel controls -->
-      <a class="carousel-control left " href="#myCarousel " data-slide="prev ">
-            <span class="glyphicon glyphicon-chevron-left "></span>
+      <a class="carousel-control left " href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
-      <a class="carousel-control right " href="#myCarousel " data-slide="next ">
-            <span class="glyphicon glyphicon-chevron-right "></span>
+      <a class="carousel-control right " href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
     </div>
   </div>
